--- a/sparkle.html
+++ b/sparkle.html
@@ -1316,3 +1316,7 @@
 
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
+
+</script>
+</body>
+</html>
